force-app/main/default/objects/EcomailFieldMapping__mdt/EcomailFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>Ecomail Field Mapping</label>
    <pluralLabel>Ecomail Field Mappings</pluralLabel>
</CustomObject>