force-app/main/default/objects/EcomailFieldMapping__mdt/fields/EcomailField__c.field-meta.xml
<CustomField>
    <fullName>EcomailField__c</fullName>
    <label>EcomailField</label>
    <length>50</length>
    <type>Text</type>
</CustomField>