force-app/main/default/objects/EcomailFieldMapping__mdt/fields/SfdcField__c.field-meta.xml
<CustomField>
    <fullName>SfdcField__c</fullName>
    <label>SfdcField</label>
    <metadataRelationshipControllingField>EcomailFieldMapping__mdt.SfdcObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>EcomailFieldMappings</relationshipLabel>
    <relationshipName>EcomailFieldMappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>