force-app/main/default/objects/EcomailFieldMapping__mdt/fields/SfdcObject__c.field-meta.xml
<CustomField>
    <fullName>SfdcObject__c</fullName>
    <label>SfdcObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>EcomailFieldMappings</relationshipLabel>
    <relationshipName>EcomailFieldMappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>